# filecastalogue

./: .gitignore  Cargo.toml  README.md
docs/: diagrams.md  usecases.md
filecastalogue/: Cargo.toml
filecastalogue/src/: error.rs  files.rs  finite_stream_handlers.rs  globals.rs  hash_file_name.rs  journal.rs  lib.rs  meta.rs  opaque_collection_handler.rs  opaque_collection_handlers.rs  repo.rs  tests.rs
filecastalogue/src/files/: blob.rs  blobs.rs  hashable.rs  index.rs  index_collection.rs  indexes.rs  state.rs  state_collection.rs  tracked.rs  tracked_collection.rs  tracked_ordinary_blob.rs  tracked_ordinary_blob_collection.rs
filecastalogue/src/files/blobs/drivers/: local.rs
filecastalogue/src/files/index/drivers/: local.rs
filecastalogue/src/files/indexes/drivers/: local.rs
filecastalogue/src/files/state/drivers/: local.rs
filecastalogue/src/journal/drivers/: local.rs
filecastalogue/src/meta/: blob.rs  converter.rs  file_aspects.rs  index.rs  state.rs  version.rs
filecastalogue/src/meta/blob/: model.rs  principal_conversions.rs  repo_exported.rs
filecastalogue/src/meta/file_aspects/: aspects.rs  attributes.rs  enums.rs
filecastalogue/src/meta/file_aspects/aspects/: directory.rs  hardlink.rs  non_existing.rs  ordinary.rs  symlink.rs
filecastalogue/src/meta/index/: accessor.rs  converter.rs  error.rs  model.rs  principal_conversions.rs
filecastalogue/src/meta/repo_exported_file_list/: model.rs
filecastalogue/src/meta/state/: accessor.rs  converter.rs  error.rs  model.rs  principal_conversions.rs
filecastalogue/src/meta/version/: accessor.rs  model.rs
filecastalogue/src/opaque_collection_handler/drivers/: local.rs
filecastalogue/src/tests/: TEST_CONF.rs  fixtures.rs  meta.rs  repo.rs  test_ids.rs  test_utils.rs
filecastalogue/src/tests/fixtures/: models.rs  repo.rs
filecastalogue/src/tests/test_fixtures/: models.rs  repo.rs
filecastalogue_macros/: Cargo.toml
filecastalogue_macros/src/: lib.rs
filecastalogue_mess/: Cargo.toml  index.json
filecastalogue_mess/src/: index_json.rs  mess_typed_json.rs  mess_wild_json.rs  state.rs  state_json.rs
filecastalogue_tests/: Cargo.toml
filecastaloguer/: Cargo.toml
filecastaloguer/src/: main.rs
filecastaloguer/tests/: cli.rs
ops/: Cargo.toml
ops/src/: fixture_with_namehash_from_file.rs
scripts/: debug_ops.sh  lib.sh  test_cli.sh  test_typed.sh  test_wild.sh  test_with_output_and_without_warnings.sh  test_without_warnings.sh  vars
(+6 files in other folders)
