[package]
name = "filecastalogue"
version = "0.1.0"
authors = ["Aziroshin <aziroshin@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
blake3 = "0.3.8"
serde-bytes-repr = { version = "0.1.5", optional = true }
serde_bytes = "0.11"
# base64 = "0.13.0"

[features]
os_string_paths = ["serde-bytes-repr"]