[package]
name = "filecastaloguer"
version = "0.1.0"
authors = ["Aziroshin <aziroshin@gmx.net>"]
edition = "2018"
default-run = "filecastaloguer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
filecastalogue = { path = "../filecastalogue" }

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"
tempdir = "0.3.7"