[package]
name = "ops"
version = "0.1.0"
authors = ["Aziroshin <aziroshin@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="fixture_with_namehash_from_file"
path="src/fixture_with_namehash_from_file.rs"

[dependencies]
blake3 = "0.3.7"